My_project/build/log/idf_py_stdout_output_2984
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\Espressif\ESP\My_project\build\bootloader\esp-idf\esptool_py && D:\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe D:/Espressif/frameworks/esp-idf-v5.2.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Espressif/ESP/My_project/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/9] Building C object esp-idf/lib_gpio/CMakeFiles/__idf_lib_gpio.dir/hal_gpio.c.obj
FAILED: esp-idf/lib_gpio/CMakeFiles/__idf_lib_gpio.dir/hal_gpio.c.obj 
ccache D:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.2-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Espressif/ESP/My_project/build/config -ID:/Espressif/ESP/My_project/components/lib_gpio -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/newlib/platform_include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/esp_additions/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include/soc -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include/soc/esp32 -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/port/esp32/. -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/heap/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/log/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/soc/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/soc/esp32 -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/soc/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/hal/platform_port/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/hal/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/hal/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/include/esp32 -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/esp32 -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_common/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/port/soc -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/port/include/private -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/deprecated_include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include/apps -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include/apps/sntp -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/lwip/src/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/freertos/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include/arch -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include/sys -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/deprecated -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/analog_comparator/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/dac/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/gpio/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/gptimer/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/i2c/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/i2s/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/ledc/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/mcpwm/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/parlio/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/pcnt/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/rmt/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sdio_slave/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sdmmc/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sigma_delta/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/spi/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/temperature_sensor/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/touch_sensor/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/twai/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/uart/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/usb_serial_jtag/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/driver/touch_sensor/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_pm/include -ID:/Espressif/frameworks/esp-idf-v5.2.2/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/Espressif/ESP/My_project=. -fmacro-prefix-map=D:/Espressif/frameworks/esp-idf-v5.2.2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/lib_gpio/CMakeFiles/__idf_lib_gpio.dir/hal_gpio.c.obj -MF esp-idf\lib_gpio\CMakeFiles\__idf_lib_gpio.dir\hal_gpio.c.obj.d -o esp-idf/lib_gpio/CMakeFiles/__idf_lib_gpio.dir/hal_gpio.c.obj -c D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c: In function 'HAL_GPIO_OUTPUT_CONFIG':
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c:11:4: error: expected ',' or ';' before 'gpio_config'
   11 |    gpio_config(&gpio_cfig)
      |    ^~~~~~~~~~~
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c: In function 'HAL_GPIO_INPUT_CONFIG':
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c:20:5: error: expected ',' or ';' before 'gpio_config'
   20 |     gpio_config(&gpio_cfig)
      |     ^~~~~~~~~~~
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c: In function 'HAL_GPIO_TOGGLEPIN':
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c:26:39: error: expected expression before 'gpio_num_t'
   26 |   uint8_t toggle = 1 - gpio_get_level(gpio_num_t gpio_nums);
      |                                       ^~~~~~~~~~
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c: In function 'HAL_GPIO_GETPIN_STATE':
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c:30:28: error: expected expression before 'gpio_num_t'
   30 |     return  gpio_get_level(gpio_num_t gpio_nums);
      |                            ^~~~~~~~~~
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c: In function 'HAL_GPIO_INPUT_CONFIG':
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c:31:1: error: expected declaration or statement at end of input
   31 | }
      | ^
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c:14:19: warning: unused variable 'gpio_cfig' [-Wunused-variable]
   14 |     gpio_config_t gpio_cfig={
      |                   ^~~~~~~~~
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c: In function 'HAL_GPIO_OUTPUT_CONFIG':
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c:31:1: error: expected declaration or statement at end of input
   31 | }
      | ^
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c:5:19: warning: unused variable 'gpio_cfig' [-Wunused-variable]
    5 |     gpio_config_t gpio_cfig={
      |                   ^~~~~~~~~
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c: At top level:
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c:29:9: warning: 'HAL_GPIO_GETPIN_STATE' defined but not used [-Wunused-function]
   29 | uint8_t HAL_GPIO_GETPIN_STATE(gpio_num_t gpio_nums){
      |         ^~~~~~~~~~~~~~~~~~~~~
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c:25:6: warning: 'HAL_GPIO_TOGGLEPIN' defined but not used [-Wunused-function]
   25 | void HAL_GPIO_TOGGLEPIN(gpio_num_t gpio_nums){
      |      ^~~~~~~~~~~~~~~~~~
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c:13:6: warning: 'HAL_GPIO_INPUT_CONFIG' defined but not used [-Wunused-function]
   13 | void HAL_GPIO_INPUT_CONFIG(uint8_t gpio_nums){
      |      ^~~~~~~~~~~~~~~~~~~~~
D:/Espressif/ESP/My_project/components/lib_gpio/hal_gpio.c:22:6: warning: 'HAL_GPIO_SETPIN_STATE' defined but not used [-Wunused-function]
   22 | void HAL_GPIO_SETPIN_STATE(gpio_num_t gpio_nums, uint8_t level){
      |      ^~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
